# ffmpeg-wrapper

./: CMakeLists.txt  ffmpeg-wrapper.code-workspace  main.cpp  project.cmake
include/ffmpeg-wrapper/: AVCalculate.cpp  AVCalculate.h  AVChannelLayoutExtension.cpp  AVChannelLayoutExtension.h  AVChannelLayoutExtention.cpp  AVCodecExtension.cpp  AVCodecExtension.h  AVCompare.cpp  AVCompare.h  AVParse.cpp  AVParse.h  AVSampleFormatExtension.cpp  AVSampleFormatExtension.h  AVSampleFormatExtention.cpp  AVSampleFormatExtention.h  AVToString.cpp  AVToString.h  ErrorCode.cpp  ErrorCode.h  ImageBuffer.cpp  ImageBuffer.h  base_include.h  ffmpeg.h  ffmpeg_headers.h  pch.h
include/ffmpeg-wrapper/container/: HysteresisBlockingFrameQueue.cpp  HysteresisBlockingFrameQueue.h  HysteresisBlockingPacketQueue.cpp  HysteresisBlockingPacketQueue.h
include/ffmpeg-wrapper/demux/: BestStreamDemuxDecoder.cpp  BestStreamDemuxDecoder.h  JoinedInputFormatDemuxDecoder.cpp  JoinedInputFormatDemuxDecoder.h
include/ffmpeg-wrapper/factory/: DecoderPipeFactory.cpp  DecoderPipeFactory.h  DecoderPipeFactoryManager.cpp  DecoderPipeFactoryManager.h  EncoderPipeFactory.cpp  EncoderPipeFactory.h  EncoderPipeFactoryManager.cpp  EncoderPipeFactoryManager.h  IDecoderPipeFactory.h  IEncoderPipeFactory.cpp  IEncoderPipeFactory.h
include/ffmpeg-wrapper/filter/: VideoFilterGraph.cpp  VideoFilterGraph.h
include/ffmpeg-wrapper/info-collection/: AVStreamInfoCollection.cpp  AVStreamInfoCollection.h  (+15 more)
private_src/: EncoderPipe.cpp  EncoderPipe.h  FpsAdjustPipe.cpp  SwsPipe.cpp  pch.h
test/: main.cpp
(+86 files in other folders)
